[gd_scene load_steps=6 format=3 uid="uid://jhk6llaifbnf"]

[ext_resource type="Script" path="res://scenes/uis/inventory/inventory.gd" id="1_seg0m"]
[ext_resource type="PackedScene" uid="uid://b06y4gx4xf1rt" path="res://scenes/uis/inventory/inventory_slot.tscn" id="2_dvgsi"]
[ext_resource type="PackedScene" uid="uid://d2y650i0u073l" path="res://scenes/characters/player/player_inventory_sheet.tscn" id="2_nrhji"]
[ext_resource type="PackedScene" uid="uid://dsmrx0svvbn36" path="res://scenes/uis/inventory/inventory_slot_detail.tscn" id="3_n1ui8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7xmc"]
bg_color = Color(0.362829, 0.362829, 0.362829, 1)

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_seg0m")

[node name="InventoryMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="InventoryMargin"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryMargin/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryMargin/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_a7xmc")

[node name="MarginContainer" type="MarginContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="PanelContainer4" type="PanelContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="PanelContainer5" type="PanelContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="PlayerInventorySheet" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_nrhji")]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "stat 1
"

[node name="Label2" type="Label" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "stat 1
"

[node name="Label3" type="Label" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "stat 1
"

[node name="Label4" type="Label" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "stat 1
"

[node name="Label5" type="Label" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "stat 1
"

[node name="Label6" type="Label" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "stat 1
"

[node name="Label7" type="Label" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "stat 1
"

[node name="Label8" type="Label" parent="InventoryMargin/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "stat 1
"

[node name="SlotsMarginContainer" type="MarginContainer" parent="InventoryMargin/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VerticalSlotsContainer" type="VBoxContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Inventory"

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="InventorySlots" type="GridContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="InventorySlot" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer/InventorySlots" instance=ExtResource("2_dvgsi")]
layout_mode = 2

[node name="InventorySlot2" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer/InventorySlots" instance=ExtResource("2_dvgsi")]
layout_mode = 2

[node name="InventorySlot3" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer/InventorySlots" instance=ExtResource("2_dvgsi")]
layout_mode = 2

[node name="InventorySlot4" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer/InventorySlots" instance=ExtResource("2_dvgsi")]
layout_mode = 2

[node name="InventorySlot5" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer/InventorySlots" instance=ExtResource("2_dvgsi")]
layout_mode = 2

[node name="InventorySlot6" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer/InventorySlots" instance=ExtResource("2_dvgsi")]
layout_mode = 2

[node name="InventorySlot7" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer/InventorySlots" instance=ExtResource("2_dvgsi")]
layout_mode = 2

[node name="InventorySlot8" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer/InventorySlots" instance=ExtResource("2_dvgsi")]
layout_mode = 2

[node name="InventorySlot9" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer/InventorySlots" instance=ExtResource("2_dvgsi")]
layout_mode = 2

[node name="InventorySlot10" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer/InventorySlots" instance=ExtResource("2_dvgsi")]
layout_mode = 2

[node name="InventorySlot11" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer/InventorySlots" instance=ExtResource("2_dvgsi")]
layout_mode = 2

[node name="InventorySlot12" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/ScrollContainer/InventorySlots" instance=ExtResource("2_dvgsi")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Weight: 0/100"

[node name="Label3" type="Label" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/VerticalSlotsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Gold: 10000"

[node name="SlotDetailsNode" type="Control" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="InventorySlotDetail" parent="InventoryMargin/PanelContainer/HBoxContainer/SlotsMarginContainer/SlotDetailsNode" instance=ExtResource("3_n1ui8")]
visible = false
layout_mode = 1

[node name="CloseButton" type="Button" parent="InventoryMargin/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "X"

[connection signal="pressed" from="InventoryMargin/PanelContainer/CloseButton" to="." method="_on_close_button_pressed"]
